# enterprise-ai-model-selection-optimizer

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: main.py  models.py
app/api/: ai_routes.py  auth_routes.py  routes.py
app/auth/: dependencies.py  security.py
app/core/: config.py
app/crud/: model_crud.py
app/data/: models.json
app/database/: database.py  models.py  seed.py  user_model.py
app/schemas/: assistant.py  auth.py  model_schema.py
app/services/: ai_assistant.py  optimizer.py  user_service.py
app/static/: app.js  styles.css
app/templates/: index.html
images/: .gitkeep
tests/: test_models.py  test_optimizer.py
