[project]
name = "enterprise-ai-model-selection-optimizer"
version = "0.2.0"
description = "Enterprise dashboard and multi-criteria AI model selection optimizer."
requires-python = ">=3.11,<3.15"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
